--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="p5.min.js" charset="utf-8"></script>
+    <script src="p5.sound.js" charset="utf-8"></script>
     <script src="classes.js" charset="utf-8"></script>
     <script src="sketch.js" charset="utf-8"></script>
     <meta charset="UTF-8">
